<resources>
    <string name="app_name">EvenTour</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_intro_title">Hello EvenTourists!</string>
    <string name="slide_intro_desc">The easiest way to organize your event</string>

    <string name="slide_calendar_title">Schedule Maker</string>
    <string name="slide_calendar_desc">Make your personalized schedules for each event you will go.</string>

    <string name="slide_placeholder_title">Travel around the event</string>
    <string name="slide_placeholder_desc">We offer you a personalized map from event. You don\'t be lost anymore!</string>

    <string name="slide_invitation_title">Invite your friends</string>
    <string name="slide_invitation_desc">Tell everybody how much you love EvenTour. We appreciate it</string>

    <string name="database_reference">https://eventour-ea6ff.firebaseio.com/</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="eventour">EvenTour</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="new_account">I\'m new here. Let me register.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_events">Events</string>
    <string name="title_settings">Settings</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_profile">Profile</string>
    <string name="title_search">Search</string>
    <string name="cd_logo">Logo</string>
    <string name="title_organizers">Organizers</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="title_activity_organizer">OrganizerActivity</string>
    <string name="contact_us">CONTACT US</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="exiting_account">I already have an account.</string>
    <string name="no_favorites_text_view">NO TIENES EVENTOS FAVORTIOS AGREGADOS :( </string>
    <string name="test_name">Rodrigo Guadalupe</string>
    <string name="follow_me">Follow Me</string>
    <string name="test_email">rodrigo_guadalupe@gmail.com</string>
    <string name="show_all_comments">Show all comments</string>
    <string name="test_phone">+266 225 225</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="recover_password">Recover password</string>
    <string name="facebook_app_id">1971116296520236</string>
    <string name="fb_login_protocol_scheme">fb1971116296520236</string>
    <string name="web_client_google">153227581366-2fqkjlf514lq7aenqsu4v4fvgi0eq5t8.apps.googleusercontent.com</string>
    <string name="invalid_email">com.google.firebase.auth.FirebaseAuthInvalidCredentialsException: The email address is badly formatted.</string>
    <string name="weak_password">com.google.firebase.auth.FirebaseAuthWeakPasswordException: The given password is invalid. [ Password should be at least 6 characters ]</string>
    <string name="already_registered">com.google.firebase.auth.FirebaseAuthUserCollisionException: The email address is already in use by another account.</string>
    <string name="title_activity_recover_password">RecoverPasswordActivity</string>
    <string name="email_hint">Email</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="report">Report</string>
    <string name="q_amp_a"><![CDATA[Q&A]]></string>
    <string name="Rate">Rate</string>
    <string name="opinion_text">Your opinion it\'s important for us</string>
    <string name="opinion_question">What is your opinion about this event?</string>
    <string name="send">Send</string>
    <string name="please_tell_us_whats_happen">Please tell us whats happen</string>
    <string name="report_hin">Report the problem</string>
    <string name="report_button_text">REPORT</string>
    <string name="question_button_text">Send</string>
    <string name="question_edit">Your questions will be answered...</string>
    <string name="make_your_questions">Ask your question FREE </string>
    <string name="title_activity_question_event">QuestionEventActivity</string>


    <string name="title_activity_chat">ChatActivity</string>

</resources>
