<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".ui.activities.QuestionEventActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/make_your_questions"
        android:textStyle="bold"
        android:textSize="30sp"/>


    <EditText
        android:id="@+id/question_edit_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:inputType="text"
        android:layout_weight="2"
        android:hint="@string/question_edit"
        />

    <Button
        android:id="@+id/question_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/colorAccent"
        android:textStyle="bold"
        android:text="@string/question_button_text"/>

</LinearLayout>