<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".ui.activities.RateEventActivity">


    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/opinion_question"
        android:textStyle="bold"
        android:textSize="40sp"
        android:fontFamily="casual"
        android:textColor="#000"
        />

    <com.hsalf.smilerating.SmileRating
        android:id="@+id/smile_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/text_title"/>

    <EditText
        android:id="@+id/opinion_edit_text"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:hint="@string/opinion_text"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/smile_rating" />

    <Button
        android:id="@+id/send_opinion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:backgroundTint="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/opinion_edit_text"/>

</android.support.constraint.ConstraintLayout>