<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.activities.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/rnrbw" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/usernameTextView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/username_hint"
                android:inputType="textWebEmailAddress"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="@color/icons"
                android:textColorHint="@color/icons"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/passwordTextView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="@color/icons"
                android:textColorHint="@color/icons"
                android:textSize="16sp" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/login"
                android:textColor="@color/icons" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="4dp"
                    android:id="@+id/googleLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/google_icon"/>

                <ImageView
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp"
                    android:id="@+id/facebookLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/facebook_icon"/>

            </LinearLayout>

            <TextView
                android:id="@+id/forgotPasswordButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:text="@string/forgot_pass"
                android:textColor="@color/icons" />

            <TextView
                android:id="@+id/registerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="@string/new_account"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>