<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.activities.EventActivity"
    tools:showIn="@layout/activity_event"
    android:layout_margin="16dp">


    <TextView
        android:id="@+id/EventDetailName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <com.androidnetworking.widget.ANImageView
        android:id="@+id/EventDetailImage"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:layout_constraintTop_toBottomOf="@id/EventDetailName"/>

    <ImageButton
        android:id="@+id/bookmarkImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/EventDetailDuration"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_bookmark_border_black_24dp"/>

    <TextView
        android:id="@+id/EventDetailStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/EventDetailImage"/>

    <TextView
        android:id="@+id/EventDetailEnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/EventDetailStart"/>

    <TextView
        android:id="@+id/EventDetailDuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/EventDetailEnd"/>

    <LinearLayout
        android:id="@+id/layoutButtonsEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintTop_toBottomOf="@id/bookmarkImageButton">
        
        <Button
            android:id="@+id/report_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/report"/>

        <Button
            android:id="@+id/q_a_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/q_amp_a"/>

        <Button
            android:id="@+id/rate_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/Rate"/>
        
    </LinearLayout>

</android.support.constraint.ConstraintLayout>