<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.activities.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/rnrbw" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/eventour"
                android:textColor="@color/icons"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nameRegisterTextView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="Name"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="@color/icons"
                android:textColorHint="@color/icons"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/emailRegisterTextView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="Email"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="@color/icons"
                android:textColorHint="@color/icons"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/passRegisterTextView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="Password"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="@color/icons"
                android:textColorHint="@color/icons"
                android:textSize="16sp" />


            <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/register"
                android:textColor="@color/icons" />


            <TextView
                android:id="@+id/alreadyRegistered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="@string/exiting_account"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>